--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ a.cta-button {
     content: ''; }
   .custom-header:before {
     height: 300px;
-    background: transparent url("http://svg.redradar.net/boston-2018/teal-tri.svg") no-repeat center;
+    /* background: transparent url("http://svg.redradar.net/boston-2018/teal-tri.svg") no-repeat center;*/
     background-size: 100% 100%; }
   .custom-header:after {
     bottom: -1px;
