--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  color: #fff;
+  color: #000;
   font-family: "proxima-nova", sans-serif;
   font-size: 20px;
   font-size: 2rem;
