--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /**!
  * Theme Name: Boston 2018
- * Template: campsite-2017
+ * Template: campsite-201715215
  */
 * {
   -webkit-box-sizing: border-box;
