--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
   color: #1d215f;
-  font-family: "proxima-nova", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   font-size: 2rem;
   line-height: 1.55; }
@@ -20,11 +20,12 @@ button,
 input,
 select,
 textarea {
-  font-family: "proxima-nova", sans-serif; }
+  font-family: 'Open Sans', sans-serif;}
 
 h1, h2, h3, h4, h5, h6 {
   clear: none;
-  font-family: "freight-sans-condensed-pro", sans-serif; }
+  font-weight: 800;
+  font-family: 'Open Sans', sans-serif;}
 
 .wp-block-separator,
 hr {
