change the color of body

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  color: #1d215f;
+  color: 010101;
   font-family: 'Open Sans', sans-serif;
   font-size: 20px;
   font-size: 2rem;
