--- a/style.css
+++ b/style.css
@@ -702,7 +702,7 @@ body.home .hentry {
   height: 100vh;
   min-height: 600px;
   max-height: 960px;
-  background: url("http://svg.redradar.net/boston-2018/photo.png") no-repeat center;
+ /* background: url("http://svg.redradar.net/boston-2018/photo.png") no-repeat center;*/
   background-size: cover;
   display: grid; }
   body.home .hentry:after {
@@ -714,7 +714,7 @@ body.home .hentry {
     height: 20vh;
     min-height: 120px;
     max-height: 192px;
-    background: transparent url("http://svg.redradar.net/boston-2018/white-tri-flip.svg") no-repeat center;
+    /*background: transparent url("http://svg.redradar.net/boston-2018/white-tri-flip.svg") no-repeat center;*/
     background-size: 100% 100%; }
 
 body.home .entry-content {
