--- a/style.css
+++ b/style.css
@@ -6,13 +6,17 @@
 
  /* Additional Code goes here  */
 
-.site-branding{
+
+h1.site-title a,
+p.site-description{
+  color:#fff;
   text-align:center;
   text-transform: uppercase;
-  color:#fff;
 }
 
-
+p.site-description {
+  font-weight: 300;
+}
 
 * {
   -webkit-box-sizing: border-box;
