--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
  /* Additional Code goes here  */
  .site-branding{
   text-align:center;
+  padding:25px 0 185px 0;
 }
 
 h1.site-title a,
@@ -388,8 +389,9 @@ background-size: cover;
   .custom-header .custom-logo-link {
     display: block;
     margin: 0 auto;
-    padding: 140px 0 300px;
-    max-width: 600px; }
+    padding: 200px 0px 0px 0px;
+   text-align:center; 
+  }
 
 /* Try a smaller logo on interior pages */
 body:not(.home) .custom-header .wp-custom-header,
