remove blue background on the right menu

--- a/style.css
+++ b/style.css
@@ -327,7 +327,7 @@ a.cta-button {
       background: #ff9700; }
       .page-navigation-container .callout:hover a, .page-navigation-container .callout.focus a {
         color: #1d215f; }
-  @media (min-width: 1160px) {
+  /* @media (min-width: 1160px) {
     .page-navigation-container:after {
       content: '';
       position: absolute;
@@ -335,7 +335,7 @@ a.cta-button {
       bottom: 0;
       right: 0;
       left: calc( 50vw + 580px);
-      background: #1d215f; } }
+      background: #1d215f; } } */
 
 #site-navigation {
   display: none !important; }
