--- a/style.css
+++ b/style.css
@@ -327,6 +327,16 @@ a.cta-button {
       background: #ff9700; }
       .page-navigation-container .callout:hover a, .page-navigation-container .callout.focus a {
         color: #1d215f; }
+  /* @media (min-width: 1160px) {
+    .page-navigation-container:after {
+      content: '';
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: calc( 50vw + 580px);
+      background: #1d215f; } } */
+
 #site-navigation {
   display: none !important; }
 
@@ -1031,6 +1041,8 @@ body.error404 .search-form {
 }
 .page-navigation-container ul ul {
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
+  float: left;
+  position: absolute;
   top: 1.5em;
   left: -999em;
   z-index: 99999;
