--- a/style.css
+++ b/style.css
@@ -309,7 +309,7 @@ a.cta-button {
       width: 17em; }
     .page-navigation-container ul ul li:hover a,
     .page-navigation-container ul ul li.focus a {
-      color: #2A2878;
+      color: #fff;
       margin-left: -15px; }
       .page-navigation-container ul ul li:hover a:before,
       .page-navigation-container ul ul li.focus a:before {
