--- a/style.css
+++ b/style.css
@@ -281,6 +281,7 @@ a.cta-button {
   .page-navigation-container .menu-primary-nav-container {
     margin: 0 auto;
     /* max-width: 1160px;*/
+    width: auto;
     position: relative; }
   .page-navigation-container a {
     padding: 30px 20px;
@@ -299,7 +300,7 @@ a.cta-button {
     background: #2A2878; }
     .page-navigation-container li:hover a,
     .page-navigation-container li.focus a {
-      color: #a00a74;
+      color: #fff;
       text-decoration: none; }
   .page-navigation-container ul ul {
     top: 78px;
