--- a/style.css
+++ b/style.css
@@ -304,16 +304,14 @@ a.cta-button {
       text-decoration: none; }
   .page-navigation-container ul ul {
     top: 78px;
-    background: #ffffff;
-    padding: 10px 0 20px; }
+    background: #ffffff;}
     .page-navigation-container ul ul a {
       padding: 8px 30px;
       color: #000;
       width: 17em; }
     .page-navigation-container ul ul li:hover a,
     .page-navigation-container ul ul li.focus a {
-      color: #fff;
-      margin-left: -15px; }
+      color: #fff;}
       .page-navigation-container ul ul li:hover a:before,
       .page-navigation-container ul ul li.focus a:before {
         display: inline-block;
@@ -1047,8 +1045,7 @@ body.error404 .search-form {
   left: 100%;
 }
 .page-navigation-container ul ul li a {
-
-  color: #000;
+  color: #000!important;
 }
 .page-navigation-container ul li:hover > ul,
 .page-navigation-container ul li.focus > ul {
