remove disc on submenu hover state

--- a/style.css
+++ b/style.css
@@ -308,16 +308,11 @@ a.cta-button {
     .page-navigation-container ul ul a {
       padding: 8px 30px;
       color: #000;
-      width: 17em; }
+      width: 17em;
+      border-top: 1px solid grey; }
     .page-navigation-container ul ul li:hover a,
     .page-navigation-container ul ul li.focus a {
       color: #fff;}
-      .page-navigation-container ul ul li:hover a:before,
-      .page-navigation-container ul ul li.focus a:before {
-        display: inline-block;
-        content: '\25cf';
-        width: 13px;
-        margin-right: 2px; }
   .page-navigation-container .callout {
     position: absolute;
     right: 0;
@@ -1037,7 +1032,7 @@ body.error404 .search-form {
   left: -999em;
   z-index: 99999;
   border-radius: 0px 0px 5px 5px;
-  background-color: #312F76;
+  background-color: #2A2878;
   color:#fff;
 }
 .page-navigation-container ul ul ul {
