--- a/style.css
+++ b/style.css
@@ -280,6 +280,7 @@ a.cta-button {
   background: #fff; }
   .page-navigation-container .menu-primary-nav-container {
     display: inline-block;
+    height: 67px;
     /* max-width: 1160px;*/
     /* width: 50%;*/
     position: relative; }
