--- a/style.css
+++ b/style.css
@@ -1063,6 +1063,8 @@ body.error404 .search-form {
 }
 .page-navigation-container.toggled-on  .menu-primary-nav-container{
   width: 100%;
+  display: block;
+  height: auto;
 }
 .page-navigation-container.toggled-on a{
   color:#fff;
