add the other widgets

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ Widgets After Big Hero
   font-weight: 400;
 }
 
-#custom_html-7{
+#custom_html-7, #custom_html-8, #custom_html-9{
 width: 290px;
 text-align: center;
 }
