--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ textarea {
   font-family: 'Open Sans', sans-serif;}
 
 h1, h2, h3, h4, h5, h6 {
+  color:#28267c;
   clear: none;
   font-weight: 800;
   font-family: 'Open Sans', sans-serif;}
