--- a/style.css
+++ b/style.css
@@ -37,13 +37,15 @@ p.site-description {
 /***********************
 Widgets After Big Hero
 ***********************/
-
+#content-widget-1 .widget {
+  margin-top: 90px;
+}
 #content-widget-1 h2 {
   text-transform: uppercase;
   font-weight: 400;
 }
 
-#custom_html-7, #custom_html-8, #custom_html-9{
+#custom_html-7, #custom_html-8, #custom_html-9, #custom_html-10{
 width: 290px;
 text-align: center;
 }
@@ -464,7 +466,7 @@ body:not(.home) .custom-header:after {
     padding-left: 20px;
     padding-right: 20px; }
   #content-widget-1 .widget + .widget {
-    margin-top: 60px; }
+    margin-top: 90px; }
   #content-widget-1 .level-1 {
     grid-column: 1 / span 2;
     font-size: 56px;
