--- a/style.css
+++ b/style.css
@@ -50,8 +50,18 @@ text-align: center;
   display: block;
   cursor: pointer;
   height:auto;
+  transition: all 300ms ease-in-out;
+  -webkit-transition: all 300ms ease-in-out;
+  -moz-transition: all 300ms ease-in-out;
+  -o-transition: all 300ms ease-in-out;
 }
 
+.textwidget.custom-html-widget a:hover img {
+  box-shadow: 0 0 25px .75px rgba(0,0,0,0.16);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -webkit-transform: scale(1.05);
+  transform: scale(1.05);
 
 /* End here */
 
