change the color of entry title

--- a/style.css
+++ b/style.css
@@ -728,7 +728,7 @@ body:not(.home) .site-main {
 .entry-title {
   margin-top: 0;
   margin-bottom: 20px;
-  color: #a00a74;
+  color: #1d1c65;
   font-weight: 900;
   line-height: 1.1; }
 
