body.home .entry-content text aligng

--- a/style.css
+++ b/style.css
@@ -791,7 +791,7 @@ body.home .entry-content {
   font-size: 2rem;
   line-height: 1.55;
   color: #010101;
-  text-align: center;
+  text-align: left;
   margin: auto; }
   body.home .entry-content .cfa-title {
     display: block;
