--- a/style.css
+++ b/style.css
@@ -763,14 +763,19 @@ body:not(.home) .site-main {
 
 body.home .entry-header,
 body.home .entry-footer {
-  display: none; }
+  max-width:780px;
+  margin:0 auto;
 
+}
+   /* 
 body.home .hentry {
+
   position: relative;
+
   height: 100vh;
   min-height: 600px;
   max-height: 960px;
- /* background: url("http://svg.redradar.net/boston-2018/photo.png") no-repeat center;*/
+background: url("http://svg.redradar.net/boston-2018/photo.png") no-repeat center;
   background-size: cover;
   display: grid; }
   body.home .hentry:after {
@@ -782,9 +787,9 @@ body.home .hentry {
     height: 20vh;
     min-height: 120px;
     max-height: 192px;
-    /*background: transparent url("http://svg.redradar.net/boston-2018/white-tri-flip.svg") no-repeat center;*/
+    /*background: transparent url("http://svg.redradar.net/boston-2018/white-tri-flip.svg") no-repeat center;
     background-size: 100% 100%; }
-
+*/
 body.home .entry-content {
   max-width: 780px;
   font-size: 20px;
