--- a/style.css
+++ b/style.css
@@ -808,16 +808,9 @@ body.home .entry-content {
     font-weight: 800;
     text-align: center; }
   body.home .entry-content a {
-    display: inline-block;
-    padding: 30px 50px;
-    font-size: 28px;
-    font-size: 2.8rem;
-    line-height: 1;
-    font-weight: 900;
-    text-align: center;
-    text-decoration: none;
-    color: #1d215f;
-    background: #c6dc00; }
+    text-decoration: underline;
+    color: #28267a;
+    }
     body.home .entry-content a:hover, body.home .entry-content a:active, body.home .entry-content a:focus {
       -webkit-box-shadow: 0 2px 7px 2px rgba(79, 88, 0, 0.2), 0 1px 1px 0 rgba(79, 88, 0, 0.1);
               box-shadow: 0 2px 7px 2px rgba(79, 88, 0, 0.2), 0 1px 1px 0 rgba(79, 88, 0, 0.1); }
