--- a/style.css
+++ b/style.css
@@ -1120,19 +1120,19 @@ body.error404 .search-form {
 /* Small menu. */
 @media screen and (max-width: 760px) {
 
-.page-navigation-container.toggled-on ul {
+.page-navigation-container ul {
   display: block;
   background-color: #2A2878;
 }
-.page-navigation-container.toggled-on a{
+.page-navigation-container a{
   color:#fff;
 }
-.page-navigation-container.toggled-on .menu-primary-nav-container{
+.page-navigation-container .menu-primary-nav-container{
 width: 100%;
 display: block;
 height: auto;
 }
-.page-navigation-container.toggled-on .menu-primary-nav-container  li{
+.page-navigation-container .menu-primary-nav-container  li{
   float:none;
   text-align: left;
 }
