--- a/style.css
+++ b/style.css
@@ -1127,12 +1127,12 @@ body.error404 .search-form {
 .page-navigation-container a{
   color:#fff;
 }
-.page-navigation-container .menu-primary-nav-container{
+.page-navigation-container.toggled-on .menu-primary-nav-container{
 width: 100%;
 display: block;
 height: auto;
 }
-.page-navigation-container .menu-primary-nav-container  li{
+.page-navigation-container.toggled-on .menu-primary-nav-container  li{
   float:none;
   text-align: left;
 }
