--- a/style.css
+++ b/style.css
@@ -1120,6 +1120,11 @@ body.error404 .search-form {
 /* Small menu. */
 @media screen and (max-width: 760px) {
 
+.menu-toggle,
+.dropdown-toggle {
+  display: block;
+}
+
 .page-navigation-container ul {
   display: block;
   background-color: #2A2878;
@@ -1141,10 +1146,7 @@ height: auto;
   display: none;
 }
 
-.js .menu-toggle,
-.js .dropdown-toggle {
-  display: block;
-}
+
 }
 @media screen and (min-width: 37.5em) {
   .js .menu-toggle,
