--- a/style.css
+++ b/style.css
@@ -77,6 +77,12 @@ text-align: center;
     margin-top: 15px;
 }
 
+.entry-content img.size-full {
+  width: 140%;
+  margin-left: -20%;
+  margin-right: -20%;
+  max-width: 100vw;
+}
 
 /***********************
 <---- END HERE ------->
