--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ p.site-description {
 /***********************
  Widgets After Big Hero
 ***********************/
-
+.updated
 #content-widget-1 h2 {
  display: none;
 }
@@ -143,8 +143,8 @@ a, a:visited {
     text-decoration: underline; }
 
 .entry-title {
-  font-size: 56px;
-  font-size: 5.6rem; }
+  font-size: 38px;
+  font-size: 3.8rem; }
 
 .entry-content h1, .entry-content h2 {
   margin: 30px 0 15px;
