--- a/style.css
+++ b/style.css
@@ -84,6 +84,11 @@ text-align: center;
   max-width: 100vw;
 }
 
+h2.entry-title{
+  font-size:38px;
+  font-size:3.8rem;
+}
+
 /***********************
 <---- END HERE ------->
 ***********************/
