remove the updated class and widget title

--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ p.site-description {
   text-decoration: none;
 }
 
+.updated,
+h2.widget-title{
+  display: none;
+}
+
 /***********************
  Widgets After Big Hero
 ***********************/
