--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ text-align: center;
   margin-left: -20%;
   margin-right: -20%;
   max-width: 100vw;
+  margin-bottom:20px;
 }
 
 /***********************
