--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   text-align:center;
   padding:25px 0 185px 0;
 }
-
+p.site-title a,
 h1.site-title a,
 p.site-description{
   color:#fff;
@@ -40,6 +40,12 @@ p.site-description {
 .updated,
 h2.widget-title{
   display: none;
+}
+
+p.site-title a,
+h1.site-title a{
+  font-size:41px;
+  font-size:4.1rem;
 }
 
 /***********************
@@ -92,6 +98,10 @@ text-align: center;
   margin-right: -20%;
   max-width: 100vw;
   margin-bottom:20px;
+}
+
+.author.vcard a {
+  color: #c2b59b;
 }
 
 /***********************
@@ -752,7 +762,6 @@ body:not(.home) .site-main {
   margin-top: 0;
   margin-bottom: 20px;
   color: #1d1c65;
-  font-weight: 900;
   line-height: 1.1; }
 
 .entry-summary {
