add text shadow to site-braning

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
  .site-branding{
   text-align:center;
   padding:25px 0 185px 0;
+  text-shadow:0px 2px 6px #202020;
 }
 p.site-title a,
 h1.site-title a,
