--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@
 /*************************************
 <---- ADDITIONAL CODE GOES HERE ----->
 *************************************/
+/**************************
+     General
+***************************/
+.updated,
+h2.widget-title{
+  display: none;
+}
 
 /**************************
       Navigation Menu
@@ -30,20 +37,15 @@ p.site-description{
 }
 
 p.site-description {
-  font-weight: 300;
-  font-size:31px;
-  font-size:3.1rem;
+  font-weight: 500;
+  font-size:24px;
+  font-size:2.4rem;
   letter-spacing: 1px;
 }
 
 .site-title a:hover {
   color: #fff;
   text-decoration: none;
-}
-
-.updated,
-h2.widget-title{
-  display: none;
 }
 
 p.site-title a,
@@ -57,7 +59,7 @@ p.site-title a:hover,
 h1.site-title a:hover{
   color:#fff;
 }
-
+p.site-title,
 h1.site-title{
   margin-bottom:0;
 }
