--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ h2.widget-title{
 /**************************
   Big Hero Image Index Page
 ***************************/
+
+#wp-custom-header img {
+  max-width: 240px;
+  max-height: 343px;
+}
  .site-branding{
   text-align:center;
   padding:25px 0 185px 0;
