add the background in widgets tickets

--- a/style.css
+++ b/style.css
@@ -717,7 +717,7 @@ body:not(.home) .custom-header:after {
       padding: 0; }
 
 #footer-widget-1 {
-  background: #1d215f;
+  background: #c2b59b;
   margin: 120px 0 60px;
   padding: 120px 20px; }
   #footer-widget-1 .widget-title {
