--- a/style.css
+++ b/style.css
@@ -134,7 +134,14 @@ text-align: center;
 }
 
 /***********************
-     Subscrtibe
+     Sponsors
+***********************/
+.wcb_widget_sponsors.sponsor-logo{
+  width:33.33%;
+}
+
+/***********************
+     Subscribe
 ***********************/
 #footer-widget-3{
   background-color: rgba(194, 181, 155, 1);
@@ -146,6 +153,8 @@ text-align: center;
   margin-left:auto;
   margin-right:auto;
 }
+
+
 
 /***********************
 <---- END HERE ------->
