--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ h1.site-title{
  display: none;
 }
 
-#custom_html-7, #custom_html-8, #custom_html-9, #custom_html-10{
+#custom_html-13, #custom_html-14, #custom_html-15, #custom_html-16{
 width: 290px;
 text-align: center;
 }
@@ -100,6 +100,20 @@ text-align: center;
   -webkit-transform: scale(1.05);
   transform: scale(1.05);
 
+}
+
+#header-widget-1 {
+  margin: 0 auto;
+  max-width: 1160px;
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: #fff;
+  box-shadow: 0 0 25px .75px rgba(0,0,0,0.16);
+  border-radius: 20px;
+  height: 200px;
+  position: relative;
+  bottom: 95px;
+  padding: 0 20px;
 }
 /***********************
      Single Article
