--- a/style.css
+++ b/style.css
@@ -170,15 +170,33 @@ text-align: center;
 #footer-widget-3{
   background-color: rgba(194, 181, 155, 1);
   padding:120px 20px;
+  position:relative;
+}
+
+#footer-widget-3::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #c2b59b;
+  transform-origin: top left;
+  transform: skewY(-3deg);
+  z-index: 400;
 }
 
 #footer-widget-2{
   max-width:1200px;
   margin-left:auto;
   margin-right:auto;
+  padding: 45px 0 425px 0;
 }
 
-
+#wcorg_mailchimp_wiget-2{
+  position: relative;
+z-index: 500;
+}
 
 /***********************
 <---- END HERE ------->
