--- a/style.css
+++ b/style.css
@@ -143,14 +143,27 @@ text-align: center;
 /***********************
      Buy Tickets widgets
 ***********************/
+
+#footer-widget-1::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #c2b59b;
+  transform-origin: top right;
+  transform: skewY(-3deg);
+  z-index: 400;
+}
+/***********************
+     Sponsors
+***********************/
 #footer-widgets,
 #footer-widget-2{
   background-color:rgba(247, 247, 247, 1)
 }
 
-/***********************
-     Sponsors
-***********************/
 .wcb_widget_sponsors .sponsor-logo{
   width:33.33%;
 }
@@ -190,7 +203,7 @@ text-align: center;
   max-width:1200px;
   margin-left:auto;
   margin-right:auto;
-  padding: 45px 0 425px 0;
+  padding: 145px 0 425px 0;
 }
 
 #wcorg_mailchimp_wiget-2{
@@ -778,7 +791,9 @@ body:not(.home) .custom-header:after {
 #footer-widget-1 {
   background: #c2b59b;
   margin: 120px 0 0;
-  padding: 120px 20px; }
+  padding: 120px 20px;
+position: relative;
+}
   #footer-widget-1 .widget-title {
     margin-top: 0;
     color: white;
