add the previous image

--- a/style.css
+++ b/style.css
@@ -589,7 +589,7 @@ a.cta-button {
       color: #1d215f; } }
 
 .custom-header {
-  background-image: url("https://2018.thessaloniki.wordcamp.org/files/2018/07/wcthess_2018_1.jpg");
+  background-image: url("https://2018.thessaloniki.wordcamp.org/files/2018/07/big_hero@2x.jpg");
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
