remove padding from body:not(.home) .site-main

--- a/style.css
+++ b/style.css
@@ -866,7 +866,7 @@ position: relative;
 body:not(.home) .site-main {
   margin: 0 auto;
   max-width: 780px;
-  padding: 0 20px; }
+}
 
 .hentry + .hentry {
   margin-top: 60px; }
