--- a/style.css
+++ b/style.css
@@ -873,6 +873,7 @@ body:not(.home) .site-main {
   margin: 40px auto 20px; }
 
 .page-title {
+  text-align:center;
   margin-bottom: 10px; }
 
 .entry-header,
