--- a/style.css
+++ b/style.css
@@ -166,6 +166,23 @@ text-align: center;
   position: absolute;
   height: 11px;
 }
+
+a.btn.btn-info {
+  display: block;
+  width: 240px;
+  height: 85px;
+  background: #28267a;
+  padding: 16px;
+  text-align: center;
+  border-radius: 40px;
+  color: white;
+  font-weight: bold;
+  font-size: 26px;
+  text-transform: uppercase;
+  vertical-align: middle;
+  letter-spacing: 1px;
+  border: 4px solid #fff;
+}
 /***********************
      Sponsors Widgets 
 ***********************/
