--- a/style.css
+++ b/style.css
@@ -267,7 +267,8 @@ a.btn.btn-info {
 #blog_subscription-2{
   position:relative;
   z-index: 600;
-
+max-width:780px;
+margin:0 auto;
 }
 
 /***********************
