#footer-widget-3 .widget-title

--- a/style.css
+++ b/style.css
@@ -152,6 +152,8 @@ text-align: center;
 z-index: 600;
 position: relative;
 }
+
+#footer-widget-3 .widget-title,
   #footer-widget-1 .widget-title {
     margin-top: 0;
     color: white;
@@ -162,7 +164,6 @@ position: relative;
   position: relative;
   }
 
-  #footer-widget-3 .widget,
   #footer-widget-1 .widget {
     margin: 0 auto;
     max-width: 780px;
